--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <title>Leandro 'Leo' Da Souza</title>
+    <title>Leandro Da Souza</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
